--- a/jest.config.json
+++ b/jest.config.json
@@ -1,3 +1,12 @@
 {
-    "collectCoverage": true
+  "collectCoverage": true,
+  "coverageReporters": [
+    "json-summary",
+    "text"
+  ],
+  "coverageThreshold": {
+    "global": {
+      "lines": 80
+    }
+  }
 }
