ignore coverage for custom middleware

--- a/jest.config.json
+++ b/jest.config.json
@@ -4,6 +4,9 @@
     "json-summary",
     "text"
   ],
+  "coveragePathIgnorePatterns": [
+    "/src/metrics.js"
+  ],
   "coverageThreshold": {
     "global": {
       "lines": 80
